fixed some layout bugs

--- a/static/css/pages/index.css
+++ b/static/css/pages/index.css
@@ -77,7 +77,7 @@
     overflow-x: clip;
 }
 .sidebar .sidebar-form{
-    overflow: hidden;
+    overflow: visible;
 }
 
 
